# ViEngine

./: CMakeLists.txt
Assets/: assets.vif  variables.vif
Assets/Fonts/: fonts.vif
Assets/Materials/: materials.vif
Assets/Shaders/: fragment_depthbuffer.glsl  fragment_generic.glsl  (+11 more)
ViFramework/: CMakeLists.txt
ViFramework/src/: ProgramGeneric.cpp  ProgramGeneric.h  ProgramText.cpp  ProgramText.h  ViAsset.h  ViAssetDefinition.h  ViAssetHandler.cpp  ViAssetHandler.h  ViAssetHolder.h  ViAssetHolderFont.cpp  ViAssetHolderFont.h  ViAssetHolderMaterial.cpp  ViAssetHolderMaterial.h  ViAssetHolderProgram.cpp  ViAssetHolderProgram.h  ViAssetHolderProgramFactory.cpp  ViAssetHolderProgramFactory.h  ViAssetHolderShader.cpp  ViAssetHolderShader.h  ViAssetHolderTexture.cpp  ViAssetHolderTexture.h  ViColor.h  ViColorsGL.cpp  ViColorsGL.h  ViCompiledShader.cpp  ViCompiledShader.h  ViEnvironment.cpp  ViEnvironment.h  ViFont.cpp  ViFont.h  ViFrameBuffer.cpp  ViFrameBuffer.h  ViGame.cpp  ViGame.h  ViGlyphInfo.cpp  ViGlyphInfo.h  ViInputManager.cpp  ViInputManager.h  ViMaterial.cpp  ViMaterial.h  (+45 more)
ViGame/: CMakeLists.txt
ViGame/src/: Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkLoader.cpp  ChunkLoader.h  ChunkManager.cpp  ChunkManager.h  ChunkOctTree.cpp  ChunkOctTree.h  Cube.cpp  Cube.h  CubeInstance.cpp  CubeInstance.h  CubeRegistry.cpp  CubeRegistry.h  Player.cpp  Player.h  ProgramCubesInstanced.cpp  ProgramCubesInstanced.h  ProgramLitGeneric.cpp  ProgramLitGeneric.h  ProgramOrtho.cpp  ProgramOrtho.h  ProgramShadowmap.cpp  ProgramShadowmap.h  ProgramUnlitGeneric.cpp  ProgramUnlitGeneric.h  Rand.h  ViGameAssetHolderProgramFactory.cpp  ViGameAssetHolderProgramFactory.h  ViGameUtil.h  VoxelIslandGame.cpp  VoxelIslandGame.h  VoxelIslandRunner.cpp  VoxelWorld.cpp  VoxelWorld.h  WorldGenerator.cpp  WorldGenerator.h
cmake/: FindSDL2.cmake
includes/: PerlinNoise.h
(+4 files in other folders)
